--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^7.2.5",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
