--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongodb=mongodb+srv://tarique4a:olaola@cluster0.pimldy2.mongodb.net/cluster0?retryWrites=true&w=majority
+MONGODB=mongodb+srv://hello:hello@cluster0.pimldy2.mongodb.net/cluster0?retryWrites=true&w=majority
